<resources>
    <string name="app_name">TeamTask</string>
    <string name="copyright">Copyright © 2017 GeoBIM. All rights reserved.</string>
    <string name="common_submit">提交</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_register">注册</string>
    <string name="common_start">开始</string>
    <string name="common_stop">提示</string>
    <string name="common_end">结束</string>
    <string name="common_loading">Loading</string>
    <string name="common_back">返回</string>
    <string name="common_search">搜索</string>
    <string name="common_clear">清空</string>
    <string name="common_next">下一步</string>
    <string name="common_prev">上一步</string>
    <string name="common_setting">设置</string>
    <string name="common_username">用户名</string>
    <string name="common_nonetwork">网络无法访问，请连接后重新加载</string>
    <!-- 登录 -->
    <string name="login_title1">TeamTask</string>
    <string name="login_title2">For Better Work</string>
    <string name="login_text">登 录</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_savepassword">记住密码</string>
    <string name="login_forgetpassword">忘记密码？</string>
    <string name="login_register">注册用户</string>
    <!-- 注册 -->
    <string name="register_policy">法律声明</string>
    <string name="register_login">登&#160;录</string>
    <string name="register_enternum">请填写手机号码</string>
    <string name="register_enterVerificationCode">请输入验证码</string>
    <string name="register_getVerificationCode">发送验证码</string>
    <string name="register_getVerificationCode_again">重新发送验证码</string>
    <string name="register_getVerificationCode_phone">发送语音验证</string>
    <string name="register_notrecive">没有收到验证码？</string>
    <string name="register_phonenumber">请输入正确的手机号</string>
    <string name="register_country">国家和地区</string>
    <string name="register_country_hint">输入国家名称或区号</string>
    <string name="register_countryname">中国</string>
    <string name="register_countrynum">+86</string>
    <string name="register_make_sure_mobile_detail">是否发送验证码到：</string>
    <string name="register_receive_msg"><Data>&lt;font color=#FFFF66>%s&lt;/font>秒后可重新获取</Data></string>
    <string name="register_sendsounds">确定后将致电您的手机号播报验证码\n如不希望来电打扰请使用短信验证码</string>
    <string name="register_wrong">验证码不正确，请重新输入</string>
    <!-- 找回密码 -->
    <string name="forget_country">国家和地区</string>
    <string name="forget_countrynum">+86</string>
    <string name="forget_enternum">请填写手机号码</string>
    <string name="forget_enterVerificationCode">请输入验证码</string>
    <string name="forget_getVerificationCode">发送验证码</string>
    <string name="forget_getVerificationCode_again">重新发送验证码</string>
    <string name="forget_getVerificationCode_method">请选择获取验证码方式：</string>
    <string name="forget_getVerificationCode_sms">短信接收</string>
    <string name="forget_getVerificationCode_voice">语音播报</string>
    <string name="forget_make_sure_mobile_detail">是否发送验证码到：</string>
    <string name="forget_phonenumber">请输入正确的手机号</string>
    <string name="forget_receive_msg"><Data>&lt;font color=#FFFF66>%s&lt;/font>秒后可重新获取</Data></string>
    <string name="forget_sendsounds">确定后将致电您的手机号播报验证码\n如不希望来电打扰请使用短信验证码</string>
    <string name="forget_title">找回密码</string>
    <string name="forget_wrong">验证码不正确，请重新输入</string>

    <string name="forget_usernotexist">该用户不存在！</string>
    <!-- 重置密码 -->
    <string name="reset_title">重置密码</string>
    <string name="reset_newpassword">新密码</string>
    <string name="reset_tip"><Data>请为你的账号&lt;font >%s&lt;/font>设置密码，以保证下次正常登录</Data></string>
    <string name="reset_newpassword_hint">6-16位字母、数字或符号</string>
    <string name="reset_confirm_hint">再次输入新密码，保持一致</string>
    <string name="reset_illegal">请输入6-16位字母、数字或符号</string>

    <!-- Bast Fragment -->
    <string name="errorInfo">\n呜呜，页面出错了\n点击重新加载</string>
    <string name="nocontent">暂无内容</string>
    <string name="pull_load_more">上拉加载更多</string>
    <string name="loading">加载中...</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="error_view_no_data">暂无内容</string>

    <!-- 个人中心 -->
    <string name="me_title">我的</string>
    <string name="me_username">Joseph</string>
    <string name="me_jobposition">职务：管理员</string>
    <string name="me_tab">待办</string>
    <string name="me_tab2">已完成</string>
    <string name="me_tab3">已取消</string>
    <string name="me_item1">AR识别</string>
    <string name="me_item2">OCR认证</string>
    <string name="me_item3">安全管理</string>
    <string name="me_item4">意见反馈</string>
    <string name="me_item5">草稿箱</string>
    <string name="me_item6">版本更新</string>
    <string name="me_item7">关于</string>
    <string name="me_item8">退出</string>
    <!-- 用户信息 -->
    <string name="user_title">个人信息</string>
    <string name="user_tab1">基本信息</string>
    <string name="user_tab2">工作经历</string>
    <string name="user_tab3">家属信息</string>
    <string name="user_tab4">单位信息</string>
    <string name="user_tab5">工种信息</string>
    <string name="user_tab6">培训信息</string>
    <!-- AR -->
    <string name="ar_title">AR识别</string>
    <!-- OCR -->
    <string name="ocr_title">OCR认证</string>
    <!-- 安全管理 -->
    <string name="security_title">安全管理</string>
    <string name="security_resetpsw">修改密码</string>
    <string name="security_loginhistory">登录记录</string>
    <!-- 意见反馈 -->
    <string name="feedback_title">意见反馈</string>
    <!-- 草稿箱 -->
    <string name="draft_title">草稿箱</string>
    <!-- 版本更新 -->
    <string name="version_title">版本更新</string>
    <!-- 关于 -->
    <string name="about_title">关&#160;&#160;于</string>
    <!-- 登录历史 -->
    <string name="loginhistory_title">登录历史</string>

    <!-- 任务 -->
    <string name="task_title">任务</string>
    <!-- 项目 -->
    <string name="project_title">项目</string>
    <!-- 模型 -->
    <string name="model_title">模型</string>
    <!-- 快速创建 -->
    <string name="quick_title">快速创建</string>
    <string name="quick_item1">人员</string>
    <string name="quick_item2">物料</string>
    <string name="quick_item3">派工单</string>
    <string name="quick_item4">图钉</string>
    <string name="quick_item5">整改</string>
    <string name="quick_item6">更多</string>
</resources>
