<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >
    <LinearLayout
        android:id="@+id/login_ll_mid" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/common_space_size40"
        android:layout_marginEnd="@dimen/common_space_size40"
        android:orientation="vertical">
	    <!-- 中部1：登录名+密码 -->
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:background="@drawable/style_edittext_shape"
	        android:padding="@dimen/common_space_size12"
	        android:focusable="false"
	        android:focusableInTouchMode="true">
	        <ImageView 
	            android:id="@+id/iv_login_username"
	            android:layout_width="@dimen/common_space_size18"
	            android:layout_height="@dimen/common_space_size18"
	            android:layout_gravity="center"
	            android:background="@drawable/login_usericon"
	            android:contentDescription="@string/login_username"/>
	        <View 
	            android:layout_width="@dimen/common_space_size1"
	            android:layout_height="match_parent"
	            android:layout_marginStart="@dimen/common_space_size8"
	            android:layout_marginEnd="@dimen/common_space_size12"
	            android:background="#66ffffff"/>
	        <EditText 
	            android:id="@+id/et_login_username"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:singleLine="true"
	            android:maxLength="16"
	            android:hint="@string/login_username"
	            android:textColorHint="#ffffff"
	            android:textSize="@dimen/common_text_size16"
	            android:textColor="#ffffff"
	            android:background="@null"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="@dimen/common_space_size20"
	        android:background="@drawable/style_edittext_shape"
	        android:padding="@dimen/common_space_size12"
	        android:focusable="false"
	        android:focusableInTouchMode="true">
	        <ImageView 
	            android:id="@+id/iv_login_password"
	            android:layout_width="@dimen/common_space_size18"
	            android:layout_height="@dimen/common_space_size18"
	            android:layout_gravity="center"
	            android:background="@drawable/login_password"
	            android:contentDescription="@string/login_password"/>
	        <View 
	            android:layout_width="@dimen/common_space_size1"
	            android:layout_height="match_parent"
	            android:layout_marginStart="@dimen/common_space_size8"
	            android:layout_marginEnd="@dimen/common_space_size12"
	            android:background="#66ffffff"/>
	        <EditText 
	            android:id="@+id/et_login_password"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:singleLine="true"
	            android:maxLength="16"
	            android:hint="@string/login_password"
	            android:textColorHint="#ffffff"
	            android:textSize="@dimen/common_text_size16"
	            android:textColor="#ffffff"
	            android:inputType="textPassword"
	            android:background="@null"/>
	    </LinearLayout>
	    <RelativeLayout
	        android:id="@+id/rl_login_savepassword"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/common_space_size6"
	        android:gravity="center_vertical">
	        <TextView 
	            android:id="@+id/login_savepassword"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_marginRight="@dimen/common_space_size10"
	        	android:layout_marginLeft="@dimen/common_space_size2"
	        	android:layout_centerVertical="true"
	        	android:text="@string/login_savepassword"
	        	android:textSize="@dimen/common_text_size12"
	        	android:textColor="#ffffff"
	        	android:layout_alignParentRight="true"/>
		     <com.geobim.teamtask.ui.SmoothCheckBox.SmoothCheckBox
	            android:id="@+id/cb_login_savelogin"
		        android:layout_width="@dimen/common_space_size14"
	        	android:layout_height="@dimen/common_space_size14"
	        	android:layout_centerVertical="true"
	        	android:layout_toLeftOf="@id/login_savepassword"
	            app:color_checked="#ddFF6633"/>
	    </RelativeLayout>
    </LinearLayout>
    <!-- 中部2：登录按钮 -->
    <TextView 
        android:id="@+id/login_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_ll_mid"
        android:text="@string/login_text"
        android:textSize="@dimen/common_text_size18"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:singleLine="true"
        android:background="@drawable/style_login_selector"
        android:layout_marginTop="@dimen/common_space_size24"
        android:layout_marginStart="@dimen/common_space_size40"
        android:layout_marginEnd="@dimen/common_space_size40"/>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_start"
		android:layout_marginTop="@dimen/common_space_size12"
        android:orientation="horizontal">
	    <View 
	       android:id="@+id/login_divider"
           android:layout_width="@dimen/common_space_size1"
           android:layout_height="@dimen/common_space_size16"
           android:layout_centerInParent="true"
           android:background="#bbffffff"/>
	    <TextView
	        android:id="@+id/login_register"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/login_register"
	        android:textColor="@drawable/style_textview_color"
	        android:textSize="@dimen/common_text_size12"
	        android:layout_centerVertical="true"
	        android:gravity="right"
	        android:layout_toLeftOf="@id/login_divider"
	        android:paddingRight="@dimen/common_space_size12"/>
	    <TextView
	        android:id="@+id/login_forget"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/login_forgetpassword"
	        android:textColor="@drawable/style_textview_color"
	        android:textSize="@dimen/common_text_size12"
	        android:layout_centerVertical="true"
	        android:gravity="left"
	        android:layout_toRightOf="@id/login_divider"
	        android:paddingLeft="@dimen/common_space_size12"/>
    </RelativeLayout>
    <!-- 头部：LOGO+标题 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/login_ll_mid"
        android:layout_marginTop="@dimen/common_space_size30"
        android:layout_marginStart="@dimen/common_space_size10"
        android:layout_marginEnd="@dimen/common_space_size10"
        android:layout_marginBottom="@dimen/common_space_size30"
        android:gravity="center"
        android:orientation="vertical">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title1"
            android:textSize="@dimen/common_text_size34"
            android:textColor="#ffffff"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_space_size4"
            android:text="@string/login_title2"
            android:textSize="@dimen/common_text_size16"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <!-- 尾部：版权声明 -->
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:layout_marginBottom="@dimen/common_space_size10"
	    android:layout_marginRight="@dimen/common_space_size10"
	    android:text="@string/copyright"
	    android:textSize="@dimen/common_text_size12"
	    android:textColor="#ffffff"/>
</RelativeLayout>
