<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- 顶部 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/common_space_size6"
            android:paddingTop="@dimen/common_space_size14">

            <ImageButton
                android:id="@+id/ib_reset_back"
                android:layout_width="@dimen/common_space_size24"
                android:layout_height="@dimen/common_space_size24"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/common_space_size8"
                android:background="@drawable/btn_return" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/reset_title"
                android:textColor="#fff"
                android:textSize="@dimen/common_text_size16" />
        </RelativeLayout>
        <!-- 主体 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#f5f5f9"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_space_size10"
                android:text="@string/reset_tip"
                android:textColor="#a9a9a9"
                android:textSize="@dimen/common_text_size14" />
            <!-- 区域号+手机号 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/common_space_size20"
                android:layout_marginEnd="@dimen/common_space_size20"
                android:layout_marginStart="@dimen/common_space_size20"
                android:layout_marginTop="@dimen/common_space_size10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_newpassword"
                    android:textColor="#a9a9aa"
                    android:textSize="@dimen/common_space_size16" />

                <EditText
                    android:id="@+id/et_reset_newpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_space_size8"
                    android:background="@drawable/style_edit_selector"
                    android:hint="@string/reset_newpassword_hint"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingLeft="@dimen/common_space_size4"
                    android:paddingRight="@dimen/common_space_size14"
                    android:textColorHint="#a9a9aa"
                    android:textCursorDrawable="@drawable/style_edittext_cursor_dark"
                    android:textSize="@dimen/common_space_size16" />
                <!-- 世界上最长手机号吗为中国11位 -->
            </LinearLayout>
            <!-- 确定按钮 -->
            <TextView
                android:id="@+id/tv_reset_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_space_size20"
                android:layout_marginStart="@dimen/common_space_size20"
                android:layout_marginTop="@dimen/common_space_size20"
                android:background="@drawable/style_submit_selector"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/common_submit"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/common_text_size18" />
        </LinearLayout>
    </LinearLayout>
    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_reset_wheel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        wheel:matProg_barColor="#28ADE5"
        wheel:matProg_progressIndeterminate="true"
        android:visibility="gone"/>
</RelativeLayout>
